--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -88,6 +88,30 @@
                   <a class="nav-link" href="#"><i class="bi bi-instagram"></i></a>
               </li>
           </ul>
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/add">
+                        <i class="bi bi-cart"></i> <!-- Icone de panier -->
+                       add product <!-- Texte du lien -->
+                    </a>
+                </li>
+            </ul>
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/add-reclamation">
+                <i class="bi bi-cart"></i> <!-- Icone de panier -->
+                add reclamation <!-- Texte du lien -->
+              </a>
+            </li>
+          </ul>
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/categorie">
+                <i class="bi bi-cart"></i> <!-- Icone de panier -->
+                add Category <!-- Texte du lien -->
+              </a>
+            </li>
+          </ul>
         </div>
     </div>
 </nav>
