--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -30,6 +30,22 @@
                     </a>
                 </li>
             </ul>
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/add-reclamation">
+                <i class="bi bi-cart"></i> <!-- Icone de panier -->
+                add reclamation <!-- Texte du lien -->
+              </a>
+            </li>
+          </ul>
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/categorie">
+                <i class="bi bi-cart"></i> <!-- Icone de panier -->
+                add Category <!-- Texte du lien -->
+              </a>
+            </li>
+          </ul>
         </div>
     </div>
 </nav>
