--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -112,6 +112,14 @@
               </a>
             </li>
           </ul>
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/notification">
+                <i class="bi bi-cart"></i> <!-- Icone de panier -->
+                all notification <!-- Texte du lien -->
+              </a>
+            </li>
+          </ul>
         </div>
     </div>
 </nav>
