--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
       <a class="navbar-brand" href="#">
-          <img src="./../assets/img/logo.png" alt="Logo"> 
+          <img src="./../assets/img/logo.png" alt="Logo">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,21 +13,21 @@
                   <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                
+
                   <a class="nav-link" routerLink="/product">Products</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" routerLink="/coaches">Coaches</a> 
+                  <a class="nav-link" routerLink="/coaches">Coaches</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link"  routerLink="/sessions">Sessions</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link"  routerLink="/add">AddProduct</a>
-            </li>
             <li class="nav-item">
                 <a class="nav-link"  routerLink="/reserver">RESERVER</a>
             </li>
+              <li><a class="nav-link" routerLink="/restaurant-list">Restaurant</a></li>
+              <li><a class="nav-link" routerLink="/plat-list">Plats</a></li>
+              <li><a class="nav-link" routerLink="/favorites">Favorite Plans</a></li>
               <li class="nav-item">
                   <a class="nav-link"routerLink="/panier">
                     <i class="bi bi-cart"></i> <!-- Icone de panier -->
@@ -50,7 +50,7 @@
               <a href="#"><i class="fa fa-youtube-play"></i></a>
               <a href="#"><i class="fa fa-instagram"></i></a>
           </div>
-     
+
           <!-- Social media icons -->
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
