--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -40,6 +40,25 @@
               <li class="nav-item">
                   <a class="nav-link" href="#">Contact</a>
               </li>
+            <li class="nav-item">
+            <a *ngIf="!isLoggedIn" class="nav-link" routerLink="/sign-in" routerLinkActive="active">
+              <i class="bi bi-box-arrow-in-right me-1"></i>Sign In
+            </a>
+            <a *ngIf="isLoggedIn" class="nav-link" (click)="logout()">
+              <i class="bi bi-box-arrow-right me-1"></i>Sign Out
+            </a>
+          </li>
+            <li class="nav-item" *ngIf="isLoggedIn">
+              <a
+                class="nav-link"
+                (click)="navigateToProfile()"
+                routerLinkActive="active"
+              >
+                <i class="bi bi-person me-1"></i>Profile
+              </a>
+            </li>
+
+
           </ul>
 
 
